[tool.poetry]
name = "flightk"
version = "0.1.0"
description = ""
authors = ["Nico Abitante <nicolasabitante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
